Fixed dark mode text

--- a/src/includes/style.css
+++ b/src/includes/style.css
@@ -64,6 +64,9 @@ div.content-container {
     .date {
         color: white !important;
     }
+    .article p {
+        color: white !important;
+    }
     .article a {
         color: white !important;
     }
